Added link to Tuck forum article

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@ I am an associate professor in the Goizueta Business School at Emory University.
   </summary>
   <div class="details-content">
     We present a model rationalizing the economic value of digital tokens for launching peer-to-peer platforms: By using the blockchain to transparently distribute tokens before the platform begins operation, a token sale overcomes later coordination failures between transaction counterparties during the platform operation. This result follows from forward induction reasoning, under which the costly and observable action of token acquisition credibly communicates the intent to participate on the platform. Our theoretical framework demonstrates the applications of digital tokens to entrepreneurship, including initial coin offerings (ICOs), and offers guidance for both practitioners and regulators.
+    <br>
+    [Invited guest post summarizing the paper at the Tuck Forum on Private Equity, Venture Capital, and Entrepreneurship](http://tuck-fac-cen.dartmouth.edu/centers/cpee-forum/2017/12/18/initial-coin-offering-and-platform-building)
   </div>
 </details>
 
